# EmbarcaTech

./: README.md  bottom_control_webserver.rar
Residência Tecnológica em Software Embarcado/unidade1/: CMakeLists.txt  blinkfreertos.c
Residência Tecnológica em Software Embarcado/unidade2/buttom_webserver/: CMakeLists.txt  README.md  buttom_webserver.c
Residência Tecnológica em Software Embarcado/unidade2/joystick_control_webserver/: CMakeLists.txt  README.md  joystick_control_webserver.c  lwipopts.h  rosa_dos_ventos.h
Residência Tecnológica em Software Embarcado/unidade2/led_control_webserver/: README.md  led_control_webserver.c
Residência Tecnológica em Software Embarcado/unidade3/Q1/: README.md
Residência Tecnológica em Software Embarcado/unidade3/Q1/BH1750_OLED/: CMakeLists.txt  luminosidade.c
Residência Tecnológica em Software Embarcado/unidade3/Q2/: README.md
Residência Tecnológica em Software Embarcado/unidade3/Q2/AHT10_TEMPERATURA_UMIDADE-AHT10_OLED/: AHT10_OLED.c
Residência Tecnológica em Software Embarcado/unidade3/Q3/: README.md
Residência Tecnológica em Software Embarcado/unidade3/Q3/gps_sdcard/: CMakeLists.txt  main.c
Residência Tecnológica em Software Embarcado/unidade3/Q4/: README.md
Residência Tecnológica em Software Embarcado/unidade3/Q5/: README.md
Residência Tecnológica em Software Embarcado/unidade5/: dht22.py
Residência Tecnológica em Software Embarcado/unidade5/documentacao/: .txt
pré-selecao/Projeto EmbarcaTech - Primeira fase/: Código C.txt  Código do CMake List.txt
(+2 files in other folders)
